# DiffraFlow

./: .clang-format  .dockerignore  .env  .gitignore  .gitlab-ci.yml  .prettierrc.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.full  LICENSE  NOTICE  README.md  build.gradle  settings.gradle  wrapper.gradle
cmake/: CommonMacros.cmake  VersionInfo.cmake
config/: aggregator.conf  combiner.conf  combiner_1.conf  combiner_2.conf  combiner_addr_list.txt  controller.conf  dispatcher.conf  dispatcher_1.conf  dispatcher_2.conf  ingester.conf  ingester.dyconf  ingester_1.conf  ingester_2.conf  ingester_3.conf  ingester_addr_list.txt  log4cxx.properties  monitor.conf  monitor.dyconf  monitor_1.conf  monitor_2.conf  monitor_addr_list.txt  node_map.txt  sender.conf  sender_1.conf  sender_2.conf  sender_3.conf  sender_addr_list.txt  zookeeper_k8s.conf  zookeeper_local.conf
deploy/: diffraflow-all.yaml  namespace.yaml
deploy/LocalVMs/: dispatcher.yaml
deploy/instances/: combiner-01.yaml  combiner-02.yaml  dispatcher-02.yaml
deploy/localvms/: combiner.yaml
deploy/nginx/: diffraflow.physky.org
deploy/rolebinding/: diffraflow-test.yaml
deploy/services/: bookkeeper.yaml  cu01.conf  gen-cert.sh  gen-key.sh  nvidia-mps.yaml  pulsar-bookkeeper.yaml  pulsar-broker.yaml  pulsar-init.sh  registry-gc.sh  registry-ui.yaml  registry.yaml  zookeeper.Dockerfile  zookeeper.yaml
diffraflow/: CMakeLists.txt
diffraflow/aggregator/: CMakeLists.txt  build.gradle
diffraflow/combiner/: CMakeLists.txt  build.gradle
diffraflow/common/: CMakeLists.txt  build.gradle
diffraflow/common/inc/: Decoder.hh  GenericDgramSender.hh  ImageDataSmall.hh  ImageDataType.hh  ImageFileHDF5W.hh  ImageFileRawW.hh  ImageWithFeature.hh  MetricsProvider.hh  ReleaseInfo.hh  VersionInfo.hh
diffraflow/common/pub/: GenericClient.hh  ImageAnalysisResult.hh  ImageDataField.hh  ImageDataType.hh  ImageFeature.hh  ImageFileHDF5R.hh  ImageFileHDF5W.hh  ImageFrameDgram.hh  ImageFramePtr.hh  ImageWithFeature.hh  OptionsManager.hh  OrderedQueue.hh  PrimitiveSerializer.hh
diffraflow/common/src/: GenericConfiguration.cc  GenericConnection.cc  GenericServer.cc  ImageDataFeature.cc  ImageDataSmall.cc  ImageDataType.cc  ImageFileHDF5R.cc  ImageFileHDF5W.cc  ImageFrameRaw.cc  ImageWithFeature.cc  OptionsManager.cc  PrimitiveSerializer.cc
diffraflow/common/src/main/cpp/: DynamicConfiguration.cc  GeneralConnection.cc  GeneralServer.cc  GenericClient.cc  GenericConfiguration.cc  GenericConnection.cc  GenericDgramReceiver.cc  GenericDgramSender.cc  GenericServer.cc  ImageData.cc  ImageDataFeature.cc  ImageDataHDF5.cc  ImageDataRaw.cc  ImageDataSmall.cc  ImageDataType.cc  ImageFeature.cc  ImageFileHDF5.cc  ImageFileHDF5R.cc  ImageFileHDF5W.cc  ImageFileRawW.cc  ImageFrame.cc  ImageFrameRaw.cc  MetricsReporter.cc  NetworkUtils.cc  OptionsManager.cc  PrimitiveSerializer.cc  util_serialize.cc
diffraflow/common/src/main/headers/: NetworkUtils.hh  ReleaseInfo.hh
diffraflow/common/src/main/public/: BlockingQueue.hh  Decoder.hh  Decoder.hpp  DynamicConfiguration.hh  GeneralConnection.hh  GeneralServer.hh  GenericClient.hh  GenericConfiguration.hh  GenericConnection.hh  GenericDgramReceiver.hh  GenericDgramSender.hh  GenericServer.hh  ImageAnalysisResult.hh  ImageData.hh  ImageData.hpp  ImageDataFeature.hh  ImageDataHDF5.hh  ImageDataRaw.hh  ImageDataSmall.hh  ImageDataType.hh  ImageFeature.hh  ImageFileHDF5.hh  ImageFileHDF5R.hh  ImageFileHDF5W.hh  ImageFileRawW.hh  ImageFrame.hh  ImageFrame.hpp  ImageFramePtr.hh  ImageFrameRaw.hh  ImageVisObject.hh  ImageWithFeature.hh  MetricsProvider.hh  MetricsReporter.hh  ObjectSerializer.hh  OptionsManager.hh  PrimitiveSerializer.hh  TemporaryMap.hh  TimeOrderedQueue.hh  util_serialize.hh
diffraflow/controller/: CMakeLists.txt  build.gradle
diffraflow/dispatcher/: CMakeLists.txt  build.gradle
diffraflow/dispatcher_java/: build.gradle
diffraflow/ingester/: CMakeLists.txt  build.gradle
diffraflow/monitor/: CMakeLists.txt  build.gradle
diffraflow/shared/: CMakeLists.txt
docs/: README.md  dgram-format.txt  isolcpus.txt  protocol.txt  rawdata-format.txt  vscode-settings.json
docs/logo/: diffraflow-logo.wl
docs/misc/: adaptive-gain-function.wl  vscode-settings.json
documents/: README.md
gradle/: common_cpp_app.gradle  common_cpp_lib.gradle  common_java.gradle  dependencies.gradle
hooks/: build
scripts/: alignment_index_proc.py  build.sh  bunch_id_2_event_num.py  calib_gen.py  check_cnxn_address.sh  check_cnxn_addrlist.sh  config_net.sh  config_ring.sh  copy_sender_data.sh  cxidb_euxfel_utils.py  debug_env.sh  devel_env.sh  draw_current_event.py  env.sh  event_select_proc.py  event_view_merged.py  event_view_proc.py  install_env.sh  librdkafka_env.sh  print_partial_image_index.py  raw_data_gen.c  raw_data_gen.py  release_env.sh  thisenv.sh  trigger.sh
testing/: CMakeLists.txt  build.gradle
(+503 files in other folders)
